manaifest.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: gokart

---
# Deployment for Django App
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: gokart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: public.ecr.aws/w0n7y4q3/backend:latest
        ports:
        - containerPort: 8000

---
# Service for Django App
apiVersion: v1
kind: Service
metadata:
  name: django-app
  namespace: gokart
spec:
  selector:
    app: django-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

---
# Deployment for React App
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: gokart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: public.ecr.aws/w0n7y4q3/frontend:latest
        ports:
        - containerPort: 80

---
# Service for React App
apiVersion: v1
kind: Service
metadata:
  name: react-app
  namespace: gokart
spec:
  selector:
    app: react-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
#ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: gokart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gokart.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-app
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: django-app
            port:
              number: 8000
